<resources>
    <string name="app_name">Aaron Eats</string>
    <string name="enter_home">Enter</string>
    <string name="main_logo_text">main logo</string>
    <string name="select_a_type_of_cuisine">Select a type of cuisine:</string>
    <string name="address">Address:</string>
    <string name="credit_card">Credit Card:</string>
    <string name="email">Email</string>
    <string name="name">Name:</string>
    <string name="order">Order</string>
    <string name="phone">Phone #:</string>
    <string name="special_ninstructions">Special Instructions:</string>
    <string name="where_i_eat_and_you_pay">Where I eat and you pay</string>
    <string name="order_total">Order Total</string>
    <string name="submit_order">Submit Order</string>
    <string name="use_the_menu_to_select_a_resutrant">Use the menu to select a resutrant</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="checkout">Checkout</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="burgers">Burgers</string>
    <string name="pizza">Pizza</string>
    <string name="greek">Greek</string>
    <string name="union_burger">Union Burger</string>
    <string name="Woody">Woody\'s Burgers</string>
    <string name="museum_tavern">Museum Tavern</string>
    <string name="five_guys">Five Guys</string>
    <string name="manchi_s">ManChi\'s</string>
    <string name="heychina">HeyChina</string>
    <string name="tim_s_chinese_food">Tim\'s Chinese Food</string>
    <string name="pearl_harbourfront">Pearl Harbourfront</string>
    <string name="louis_souvlaki_amp_grill"><![CDATA[Louis Souvlaki & Grill]]></string>
    <string name="the_arkadia_house">The Arkadia House</string>
    <string name="jimmy_the_greek">Jimmy The Greek</string>
    <string name="the_souvlaki_hut">The Souvlaki Hut</string>
    <string name="remezzo_italian_bistro">Remezzo Italian Bistro</string>
    <string name="stelvio">Stelvio</string>
    <string name="donatello_restaurant">Donatello Restaurant</string>
    <string name="old_spaghetti_factory">Old Spaghetti Factory</string>
    <string name="domino_s_pizza">Domino\'s Pizza</string>
    <string name="magic_oven">Magic Oven</string>
    <string name="boston_pizza">Boston Pizza</string>
    <string name="papa_john_s_pizza">Papa John\'s Pizza</string>
</resources>
